--- a/notableLibrary/build.gradle
+++ b/notableLibrary/build.gradle
@@ -9,6 +9,12 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
     }
+    android {
+      lintOptions {
+          abortOnError false
+      }
+  }
+
 }
 apt {
     arguments {
