--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,17 @@
 buildscript {
     repositories {
         mavenCentral()
-        jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.6.4'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
-        jcenter()
+        google()
         maven {
             url "https://jitpack.io"
         }
