--- a/notableLibrary/build.gradle
+++ b/notableLibrary/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'android-apt'
 def AAVersion = '3.3.2'
 
 android {
@@ -8,37 +7,31 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 21
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "androidManifestFile": "notableLibrary/src/main/AndroidManifest.xml",
+                        "resourcePackageName": 'com.icechen1.notable.library',
+                ]
+            }
+        }
     }
     android {
-      lintOptions {
-          abortOnError false
-      }
-  }
-
-}
-apt {
-    arguments {
-        androidManifestFile variant.outputs[0]?.processResources?.manifestFile
-        //resourcePackageName 'com.icechen1.notable.libarry'
-
-        // If you're using Android NBS flavors you should use the following line instead of hard-coded packageName
-        resourcePackageName 'com.icechen1.notable.library'
-
-        // You can set optional annotation processing options here, like these commented options:
-        // logLevel 'INFO'
-        // logFile '/var/log/aa.log'
+        lintOptions {
+            abortOnError false
+        }
     }
+
 }
+
 dependencies {
-    // compile files('libs/androidannotations-api-2.7.jar')
-    compile files('libs/dashclock-api-r1.1.jar')
-    //compile files('libs/nineoldandroids-2.4.0.jar')
-    apt "org.androidannotations:androidannotations:$AAVersion"
-    compile "org.androidannotations:androidannotations-api:$AAVersion"
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.github.flavienlaurent.datetimepicker:library:+'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.github.mfornos:humanize-slim:1.2.2'
-    compile 'com.github.AndroidDeveloperLB:MaterialPreferenceLibrary:5'
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+
+    api "org.androidannotations:androidannotations-api:$AAVersion"
+    api 'com.android.support:support-v4:25.3.1'
+    api "com.google.android.apps.dashclock:dashclock-api:2.0.0"
+    api 'com.android.support:appcompat-v7:25.3.1'
+    api 'com.android.support:design:25.3.1'
+    api 'com.github.mfornos:humanize-slim:1.2.2'
+    api 'com.github.AndroidDeveloperLB:MaterialPreferenceLibrary:5'
 }
