--- a/notableLibrary/build.gradle
+++ b/notableLibrary/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 def AAVersion = '3.3.2'
 
+def manifest = projectDir.toString() +   "/src/main/AndroidManifest.xml"
+
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
@@ -10,7 +12,7 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [
-                        "androidManifestFile": "notableLibrary/src/main/AndroidManifest.xml",
+                            "androidManifestFile": manifest,
                         "resourcePackageName": 'com.icechen1.notable.library',
                 ]
             }
