--- a/notableLibrary/src/main/AndroidManifest.xml
+++ b/notableLibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.icechen1.notable.library" android:versionCode="12" android:versionName="1.0.0">
+    android:versionCode="12" android:versionName="1.0.0">
 
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 <uses-permission android:name="android.permission.VIBRATE" />
